--- a/index.html
+++ b/index.html
@@ -160,71 +160,77 @@
                       <h5 class="banhmi">Banh mi är en vietnamesisk smörgås som
                         sammanför asiatiska smaker med franskt bröd. </h5>
                       <hr>
-                      <ol class="custom-list-a">
-                        <li>
-                          <h4>
-                            Banh Mi Special <span class="price">125:- </span>
-                          </h4>
-                        </li>
-                        <p class="ingredients">Bröd med färsk leverpastej,
-                          stekt BBQ,
-                          marinerat fläsk, hemlagad korv, äggoljesås, inlagd
-                          vit
-                          rättika och morötter, gurka, chili, koriander.</p>
-                        <li>
-                          <h4>Banh Mi med Biff <span class="price">135:-</span>
-                          </h4>
-                        </li>
-                        <p class="ingredients">Bröd med stekt BBQ-marinerad
-                          entrecôte,
-                          äggoljesås, inlagd vit rättika och morötter, gurka,
-                          chili och koriander.</p>
-                        <li>
-                          <h4>Banh Mi med köttbullar <span
-                              class="price">125:-</span>
-                        </li>
-                        </h4>
-                        <p class="ingredients">Bröd med hemlagade
-                          köttbullar,
-                          äggoljesås,
-                          inlagd vit rättika och morötter, gurka samt
-                          koriander.
-                        </p>
-                        <li>
-                          <h4>Banh Mi med Fläsk <span class="price">125:-</span>
-                          </h4>
-                        </li>
-                        <p class="ingredients">Bröd med stekt BBQ-marinerad
-                          fläskkarré,
-                          färsk leverpastej, äggoljesås, inlagd vit rättika
-                          och
-                          morötter, gurka, och koriander.</p>
-                        <li>
-                          <h4>Banh Mi med Kyckling <span
-                              class="price">125:-</span>
-                          </h4>
-                        </li>
-                        <p class="ingredients">Bröd med grillad marinerad
-                          kycklingfilé,
-                          färsk leverpastej, äggoljesås, inlagd vit rättika
-                          och
-                          morötter, gurka, chili och koriander.</p>
-                        <li>
-                          <h4>Banh Mi med Tofu <span class="price">125:-</span>
-                          </h4>
-                        </li>
-                        <p class="ingredients">Bröd med friterad tofu,
-                          glasnudlar med
-                          grönsaker, äggoljesås, inlagd vit rättika och
-                          morötter,
-                          chili-majonnäs, gurka och koriander.</p>
-                      </ol>
+                      <h4 class="item">
+                        Special<img class="chili" src="img/chili.ico"> <span
+                          class="price">125:- </span>
+                      </h4>
+
+                      <p class="ingredients">Baguette med färsk leverpastej,
+                        BBQ-marinerat stekt fläsk, hemlagad korv, äggoljesås
+                        samt inlagd rättika och morötter, och gurka. Toppas med
+                        chili och koriander.</p>
+
+                      <h4 class="item">Biff<img class="chili"
+                          src="img/chili.ico"> <span class="price">145:-</span>
+                      </h4>
+
+                      <p class="ingredients">Baguette med stekt entrecôte,
+                        äggoljesås, inlagd rättika och morötter samt gurka.
+                        Toppas med chili och koriander.</p>
+
+                      <h4 class="item">Blandfärs<img class="chili"
+                          src="img/chili.ico"> <span class="price">125:-</span>
+                      </h4>
+
+                      <p class="ingredients">Baguette med hemlagade köttbullar,
+                        äggoljesås, inlagd rättika och morötter samt gurka.
+                        Toppas med chili och koriander.
+                      </p>
+
+                      <h4 class="item">Fläsk <img class="chili"
+                          src="img/chili.ico"><span class="price">125:-</span>
+                      </h4>
+
+                      <p class="ingredients">Baguette med stekt, BBQ-marinerad
+                        fläskkarré, färsk leverpastej, äggoljesås, inlagd
+                        rättika och morötter samt gurka. Toppas med chili och
+                        koriander.</p>
+
+                      <h4 class="item">Kyckling <img class="chili"
+                          src="img/chili.ico"><span class="price">125:-</span>
+                      </h4>
+
+                      <p class="ingredients">Baguette med grillad, marinerad
+                        kycklingfilé, färsk leverpastej, äggoljesås, inlagd
+                        rättika och morötter samt gurka. Toppas med chili och
+                        koriander.</p>
+
+                      <h4 class="item">Veg <img class="chili"
+                          src="img/chili.ico"><span class="price">125:-</span>
+                      </h4>
+
+                      <p class="ingredients">Baguette med friterad tofu,
+                        glasnudlar och grönsaker, äggoljesås, inlagd rättika och
+                        morötter, chilimajonnäs samt gurka. Toppas med chili och
+                        koriander.</p>
+
                       <hr>
-                      <p class="ingredients">Kontakta vår personal för att få
-                        information om våra vegetariska och veganska alternativ.
-                        Om du har allergier eller känslighet mot något
-                        livsmedel, vänligen informera oss så att vi kan hjälpa
-                        dig på bästa sätt.
+                      <div class="row align-items-center">
+                        <div class="col">
+                          Mild hetta <img class="chili" src="img/chili.ico">
+                        </div>
+                        <div class="col">
+                          Medelstark <img class="chili" src="img/chili-2.ico">
+                        </div>
+                        <div class="col">
+                          Extra het <img class="chili" src="img/chili-3.ico">
+                        </div>
+                      </div>
+                      <hr>
+                      <p class="ingredients">Fråga personalen om vegetariska
+                        eller veganska alternativ, och meddela oss vid
+                        eventuella allergier eller överkänslighet mot något
+                        livsmedel. Vi hjälper dig!
                       </p>
                     </div>
                   </div>
@@ -244,7 +250,7 @@
                 <div class="col-lg-6">
                   <div class="meny-list">
                     <div class="meny-item">
-                      <h4>
+                      <h4 class="item">
                         Poke Bowl <span class="price">145:-</span>
                       </h4>
                       <h5>Innehåll: Premium ris, avokado, mango, edamamebönor,
@@ -253,48 +259,61 @@
                       <hr>
                       <p class="ingredients">Välj Mellan:
                       </p>
-                      <h5>Kyckling:</h5>
-                      <ol class="custom-list-b">
-                        <li>Grillad marinerad kycklingfilé</li>
-                        <li>Friterad kyckling</li>
-                        <li>Kycklingspett (2 st)</li>
-                        <h5>Biff:</h5>
-                        <li>Stekt BBQ-marinerat</li>
-                        <h5>Lax:</h5>
-                        <li>Marinerad i sojasås</li>
-                        <li>Spicy lax</li>
-                        <h5>Räkor:</h5>
-                        <li>Spicy räkor</li>
-                        <li>Friterade räkor (2 st Ebi fry, tempura)</li>
-                        <h5>Vegetarisk:</h5>
-                        <li>Tofu</li>
-                      </ol>
+
+                      <li>Kyckling - Grillad marinerad kycklingfilé</li>
+                      <li>Friterad kyckling</li>
+                      <li>Kycklingspett</li>
+                      <li>Biff - Stekt entrecôte</li>
+                      <li>Lax - Marinerad i sojasås</li>
+                      <li>Spicy lax</li>
+                      <li>Spicy räkor</li>
+                      <li>Friterade räkor - Ebi fry (tempura)</li>
+                      <li>Vegetarisk - Tofu</li>
+
                       <hr>
+
                       <p class="ingredients">
                         Välj Sås:
                       </p>
-                      <ol>
-                        <li>
-                          <span>Teriyakisås</span>
-                        </li>
-                        <li>
-                          <span>Chilimajonnäs</span>
-                        </li>
-                        <li>
-                          <span>Koriandersås</p>
-                        </li>
-                      </ol>
+
+                      <li>
+                        <span>Teriyakisås</span>
+                      </li>
+                      <li>
+                        <span>Chilimajonnäs <img class="chili"
+                            src="img/chili.ico"></span>
+                      </li>
+                      <li>
+                        <span>Koriandersås <img class="chili"
+                            src="img/chili-2.ico"></p>
+                      </li>
+
+                      <hr>
+
+                      <p class="ingredients">
+                        Extra Tillbehör:
+                      </p>
+
+                      <div class="item">
+                        Cashewnötter <span class="price">15:-</span></div>
+                      <hr>
+                      <div class="row align-items-center">
+                        <div class="col">
+                          Mild hetta <img class="chili" src="img/chili.ico">
+                        </div>
+                        <div class="col">
+                          Medelstark <img class="chili" src="img/chili-2.ico">
+                        </div>
+                        <div class="col">
+                          Extra het <img class="chili" src="img/chili-3.ico">
+                        </div>
+                      </div>
                       <hr>
                       <div class="meny-item">
-                        <h5>Extra Tillbehör </h5>
-                        <p class="ingredients">Cashewnötter <span
-                            class="price">10:-</span></p>
-                        <hr>
-                        <p class="ingredients">Kontakta vår personal för att få
-                          information om våra vegetariska och veganska
-                          alternativ. Om du har allergier eller känslighet mot
-                          något livsmedel, vänligen informera oss så att vi kan
-                          hjälpa dig på bästa sätt.</p>
+                        <p class="ingredients">Fråga personalen om vegetariska
+                          eller veganska alternativ, och meddela oss vid
+                          eventuella allergier eller överkänslighet mot något
+                          livsmedel. Vi hjälper dig!</p>
                       </div>
                     </div>
                   </div>
@@ -314,48 +333,67 @@
                 <div class="col-lg-6">
                   <div class="meny-list">
                     <div class="meny-item">
-                      <h4>
+                      <h4 class="item">
                         Sommarrullar
                       </h4>
-                      <h5>Färska sommarrullar med risnudlar, gurka, morot,
+
+                      <h5>Innehåll: Färska sommarrullar med risnudlar, gurka,
+                        morot,
                         sallad och sesamfrön.
                       </h5>
-                      <p class="ingredients">Välj För: <span
-                          class="price">35:-/st</span></p>
-                      <ol class="custom-list-c">
-                        <li>Räkor</li>
-                        <li>Lax</li>
-                        <li>Biff</li>
-                        <hr>
-                        <p class="ingredients">Välj För: <span
-                            class="price">30:-/st</span></p>
-                        <li>Krabbstick</li>
-                        <li>Kyckling</li>
-                        <li>Tofu</li>
-                      </ol>
+
+                      <p class="ingredients">Välj Protein: </p>
+                      <div class="item">
+
+                        Räkor / Lax / Biff / Fläsk
+                        <span class="price">35:-/st</span>
+                      </div>
+
+                      <div class="item">
+                        Krabbstick / Kyckling / Veg / Tofu
+                        <span class="price">30:-/st</span>
+                      </div>
                       <hr>
-                      <p class="ingredients">Välj Sås:
+                      <div class="item">
+                        <p class="ingredients">Välj Sås:</p>
                         <span class="price">20:-/st</span>
-                      <ol start="3">
-                        <li>Koriandersås </li>
-                        <li>Hoisinsås </li>
-                        <li>Sötsur fisksås </li>
-                        <li>Passionssås </li>
-                      </ol>
+                      </div>
+
+                      <li>Hoisinsås </li>
+                      <li>Sötsur fisksås <img class="chili" src="img/chili.ico">
+                      </li>
+                      <li>Koriandersås <img class="chili" src="img/chili-2.ico">
+                      </li>
+
+                      <p class="ingredients mt-2">En sås ingår vid köp av 2
+                        rullar.
                       </p>
-                      <p class="ingredients">En sås ingår vid köp av 2 rullar.
-                      </p>
+
                       <hr>
-                      <h4>Mix <span class="price">129:-</span></h4>
-                      <p class="ingredients">Två såser ingår vid köp av 4
+
+                      <h4 class="item">Mix <span class="price">129:-/st</span>
+                      </h4>
+                      <p class="ingredients mt-2">Två såser ingår vid köp av 4
                         valfria rullar.
                       </p>
+
                       <hr>
-                      <p class="ingredients">Kontakta vår personal för att få
-                        information om våra vegetariska och veganska alternativ.
-                        Om du har allergier eller känslighet mot något
-                        livsmedel, vänligen informera oss så att vi kan hjälpa
-                        dig på bästa sätt.</p>
+                      <div class="row align-items-center">
+                        <div class="col">
+                          Mild hetta <img class="chili" src="img/chili.ico">
+                        </div>
+                        <div class="col">
+                          Medelstark <img class="chili" src="img/chili-2.ico">
+                        </div>
+                        <div class="col">
+                          Extra het <img class="chili" src="img/chili-3.ico">
+                        </div>
+                      </div>
+                      <hr>
+                      <p class="ingredients">Fråga personalen om vegetariska
+                        eller veganska alternativ, och meddela oss vid
+                        eventuella allergier eller överkänslighet mot något
+                        livsmedel. Vi hjälper dig!</p>
                     </div>
                   </div>
                 </div>
@@ -374,44 +412,56 @@
                 <div class="col-lg-6">
                   <div class="meny-list">
                     <div class="meny-item">
-                      <h4>
+                      <h4 class="item">
                         Bubble Tea
                         <span class="price">50:-
                         </span>
+
                       </h4>
-                      <h5>Bubble tea är en tebaserad dryck som härstammar från
-                        Taiwan och blev populär på 1980-talet. Idag går den
-                        under olika namn, såsom Bubble Tea, Pearl Milk Tea,
-                        Black Pearl Tea och Boba.
+
+                      <h5>Bubble tea är en tebaserad dryck från Taiwan som
+                        blev
+                        populär på 1980-talet. Idag är den känd under namn som
+                        Bubble Tea, Pearl Milk Tea, Black Pearl Tea och Boba.
                       </h5>
 
                       <p class="ingredients">Välj Mellan:
-                      <ol class="custom-list-d">
-                        <li>Klassiskt mjölkte</li>
-                        <li>Matcha-mjölkte</li>
-                        <li>Choklad-mjölkte</li>
-                        <li>Mjölkte med brunt socker</li>
-                        </p>
-                        <hr>
-                        <li>
-                          <h4>
-                            Peach Iced Tea <span class="price">50:-</span>
-                          </h4>
-                        </li>
-                        <h5>Peach iced tea är en uppfriskande dryck som
-                          kombinerar den klassiska smaken av iste med en söt och
-                          fruktig persikaton.</h5>
-                        <hr>
-                        <p class="ingredients">Övriga Drycker: </p>
-                        <li>Fruktdryck <span class="price"> 15:-</span></li>
-                        <li>Läsk <span class="price"> 20:-</span></li>
-                        <li>Kokosjuice <span class="price"> 25:-</span></li>
-                      </ol>
+
+                        <li>Bubble tea med klassisk smak.</li>
+                        <li>Bubble tea med matchasmak.</li>
+                        <li>Bubble tea med kaffesmak.</li>
+                        <li>Bubble tea med färsk mjölk och brunt socker.</li>
+
+                      </p>
+
+                      <hr>
+
+                      <h4 class="item">
+                        Peach Iced Tea <span class="price">50:-</span>
+                      </h4>
+
+                      <h5>Peach iced tea är en läskande dryck som kombinerar
+                        den
+                        klassiska smaken av iste med en söt och fruktig twist
+                        av
+                        persika.</h5>
+
+                      <hr>
+
+                      <p class="ingredients">Övriga Drycker: </p>
+                      <div class="item">
+                        <li>Fruktdryck</li> <span class="price"> 15:-</span>
+                      </div>
+                      <div class="item">
+                        <li>Läsk</li> <span class="price"> 20:-</span>
+                      </div>
+                      <div class="item">
+                        <li>Kokosjuice</li> <span class="price"> 25:-</span>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
       </section>
       <section id="kontakt" class="kontakt section">
         <div class="container section-title" data-aos="fade-up">
