--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   </head>
 
   <body class="index-page">
-    <header id="header" class="header d-flex align-items-center sticky-top">
+    <header id="header"
+      class="header d-flex align-items-center sticky-top dark-background">
       <div
         class="container position-relative d-flex align-items-center justify-content-between">
         <a href="#hem" class="logo d-flex align-items-center me-auto me-xl-0">
@@ -51,8 +52,10 @@
             class="row gy-4 justify-content-center justify-content-lg-between">
             <div
               class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center">
-              <h1 data-aos="fade-up">Varje tugga är fylld med tradition</h1>
-              <p data-aos="fade-up" data-aos-delay="100">En perfekt plats för
+              <h1 data-aos="fade-up">Varje tugga är fylld med
+                tradition</h1>
+              <p data-aos="fade-up" data-aos-delay="100">En
+                perfekt plats för
                 att uppleva äkta vietnamesisk mat i en avslappnad miljö</p>
               <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
                 <a href="#meny" class="btn-get-started">Se menyn</a>
