--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
         <div class="container">
           <div class="row gy-4">
             <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
-              <img src="img/om/om.jpg" class="img-fluid mb-4" alt="om izifood">
+              <img src="img/om/om.jpg" class="img-fluid mb-4 rounded-3"
+                alt="om izifood">
             </div>
             <div class="col-lg-5" data-aos="fade-up" data-aos-delay="250">
               <div class="content ps-0 ps-lg-5">
@@ -104,7 +105,7 @@
                 </p>
 
                 <div class="position-relative mt-4">
-                  <img src="img/om/om-2.jpg" class="img-fluid"
+                  <img src="img/om/om-2.jpg" class="img-fluid rounded-3"
                     alt="Om oss banh mi">
                 </div>
               </div>
@@ -476,11 +477,11 @@
           <div class="mb-5">
             <iframe style="width: 100%; height: 400px;"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4260.399603326628!2d12.003412577188156!3d57.73004913799306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464ff461b8b0c1d9%3A0x60d55fd3e109d5bc!2sGamlestadsv%C3%A4gen%2014%2C%20415%2002%20G%C3%B6teborg!5e0!3m2!1ssv!2sse!4v1739572474420!5m2!1ssv!2sse"
-              frameborder="0" allowfullscreen=""></iframe>
+              class="rounded-3" frameborder="0" allowfullscreen=""></iframe>
           </div>
           <div class="row gy-4">
             <div class="col-md-6">
-              <div class="kontakt-item d-flex align-items-center"
+              <div class="kontakt-item d-flex align-items-center rounded-3"
                 data-aos="fade-up" data-aos-delay="200">
                 <i class="icon bi bi-geo-alt flex-shrink-0"></i>
                 <div>
@@ -490,7 +491,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="kontakt-item d-flex align-items-center"
+              <div class="kontakt-item d-flex align-items-center rounded-3"
                 data-aos="fade-up" data-aos-delay="300">
                 <i class="icon bi bi-telephone flex-shrink-0"></i>
                 <div>
@@ -500,7 +501,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="kontakt-item d-flex align-items-center"
+              <div class="kontakt-item d-flex align-items-center rounded-3"
                 data-aos="fade-up" data-aos-delay="400">
                 <i class="icon bi bi-envelope flex-shrink-0"></i>
                 <div>
@@ -512,7 +513,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="kontakt-item d-flex align-items-center"
+              <div class="kontakt-item d-flex align-items-center rounded-3"
                 data-aos="fade-up" data-aos-delay="500">
                 <i class="icon bi bi-clock flex-shrink-0"></i>
                 <div>
@@ -569,42 +570,42 @@
               <div class="swiper-slide"><a class="glightbox"
                   data-gallery="images-gallery"
                   href="img/gallery/gallery-1.jpg"><img
-                    src="img/gallery/gallery-1.jpg" class="img-fluid"
+                    src="img/gallery/gallery-1.jpg" class="img-fluid rounded-3"
                     alt="poke bowl bild"></a></div>
               <div class="swiper-slide"><a class="glightbox"
                   data-gallery="images-gallery"
                   href="img/gallery/gallery-2.jpg"><img
-                    src="img/gallery/gallery-2.jpg" class="img-fluid"
+                    src="img/gallery/gallery-2.jpg" class="img-fluid rounded-3"
                     alt="En hand som håller Banh mi"></a></div>
               <div class="swiper-slide"><a class="glightbox"
                   data-gallery="images-gallery"
                   href="img/gallery/gallery-3.jpg"><img
-                    src="img/gallery/gallery-3.jpg" class="img-fluid"
+                    src="img/gallery/gallery-3.jpg" class="img-fluid rounded-3"
                     alt="bild från förr i vietnam"></a></div>
               <div class="swiper-slide"><a class="glightbox"
                   data-gallery="images-gallery"
                   href="img/gallery/gallery-4.jpg"><img
-                    src="img/gallery/gallery-4.jpg" class="img-fluid"
+                    src="img/gallery/gallery-4.jpg" class="img-fluid rounded-3"
                     alt="skål poke bowl med ett par pinnar"></a></div>
               <div class="swiper-slide"><a class="glightbox"
                   data-gallery="images-gallery"
                   href="img/gallery/gallery-5.jpg"><img
-                    src="img/gallery/gallery-5.jpg" class="img-fluid"
+                    src="img/gallery/gallery-5.jpg" class="img-fluid rounded-3"
                     alt="hur man rullar en sommarrullar"></a></div>
               <div class="swiper-slide"><a class="glightbox"
                   data-gallery="images-gallery"
                   href="img/gallery/gallery-6.jpg"><img
-                    src="img/gallery/gallery-6.jpg" class="img-fluid"
+                    src="img/gallery/gallery-6.jpg" class="img-fluid rounded-3"
                     alt="banh mi baguette"></a></div>
               <div class="swiper-slide"><a class="glightbox"
                   data-gallery="images-gallery"
                   href="img/gallery/gallery-7.jpg"><img
-                    src="img/gallery/gallery-7.jpg" class="img-fluid"
+                    src="img/gallery/gallery-7.jpg" class="img-fluid rounded-3"
                     alt="nattliv i vietnam"></a></div>
               <div class="swiper-slide"><a class="glightbox"
                   data-gallery="images-gallery"
                   href="img/gallery/gallery-8.jpg"><img
-                    src="img/gallery/gallery-8.jpg" class="img-fluid"
+                    src="img/gallery/gallery-8.jpg" class="img-fluid rounded-3"
                     alt="en tant som säljer banh mi"></a></div>
             </div>
             <div class="swiper-pagination"></div>
