--- a/index.html
+++ b/index.html
@@ -669,6 +669,96 @@
     <script src="glightbox/js/glightbox.min.js"></script>
     <script src="aos/aos.js"></script>
     <script src="main.js"></script>
+
+    <!-- Cookie Banner -->
+    <div id="cookie-banner"
+      class="position-fixed bottom-0 start-0 w-100 py-3 bg-dark text-white"
+      style="z-index: 1050; display: none;">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-8 text-md-start text-center">
+            <p class="mb-md-0">Vi använder cookies för att förbättra din
+              upplevelse på vår webbplats. Genom att fortsätta använda vår
+              webbplats godkänner du användningen av cookies.</p>
+          </div>
+          <div class="col-md-4 d-flex justify-content-center">
+            <button type="button" class="btn btn-sm btn-outline-light me-2"
+              data-bs-toggle="modal" data-bs-target="#cookiePolicyModal">Läs
+              mer</button>
+            <button type="button" class="btn btn-sm btn-primary"
+              id="accept-cookies">Godkänn</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Cookie Policy Modal -->
+    <div class="modal fade" id="cookiePolicyModal" tabindex="-1"
+      aria-labelledby="cookiePolicyModalLabel" aria-hidden="true">
+      <div
+        class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="cookiePolicyModalLabel">Cookie Policy
+            </h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"
+              aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <h4>Vad är cookies?</h4>
+            <p>Cookies är små textfiler som lagras på din dator eller mobila
+              enhet när du besöker vår webbplats. De hjälper oss att identifiera
+              din enhet när du återvänder till vår webbplats och gör att vi kan
+              förbättra din upplevelse.</p>
+
+            <h4>Hur vi använder cookies</h4>
+            <p>Vi använder cookies för att:</p>
+            <ul>
+              <li>Förstå hur besökare använder vår webbplats</li>
+              <li>Förbättra användarupplevelsen på vår webbplats</li>
+              <li>Komma ihåg dina inställningar och preferenser</li>
+              <li>Skydda din data och hålla vår webbplats säker</li>
+            </ul>
+
+            <h4>Typer av cookies vi använder</h4>
+            <p><strong>Nödvändiga cookies:</strong> Dessa cookies är nödvändiga
+              för att webbplatsen ska fungera korrekt. De gör det möjligt för
+              dig att navigera runt på webbplatsen och använda dess funktioner.
+            </p>
+
+            <p><strong>Funktionella cookies:</strong> Dessa cookies gör det
+              möjligt för vår webbplats att komma ihåg val du gjort (såsom ditt
+              användarnamn, språk eller regionen du befinner dig i) och
+              tillhandahålla förbättrade, mer personliga funktioner.</p>
+
+            <p><strong>Analytiska cookies:</strong> Dessa cookies hjälper oss
+              att förstå hur besökare interagerar med vår webbplats genom att
+              samla in och rapportera information anonymt.</p>
+
+            <h4>Hur du hanterar cookies</h4>
+            <p>De flesta webbläsare låter dig hantera dina cookies genom att
+              acceptera eller avvisa dem alla, eller genom att acceptera
+              specifika typer av cookies. Du kan när som helst blockera cookies
+              genom att aktivera inställningen i din webbläsare som gör att du
+              kan neka alla eller vissa cookies.</p>
+
+            <h4>Kontakta oss</h4>
+            <p>Om du har några frågor om vår användning av cookies, vänligen
+              kontakta oss på <a
+                href="mailto:kontakt@easyfood.se">kontakt@easyfood.se</a>.</p>
+          </div>
+          <div
+            class="modal-footer d-flex justify-content-center justify-content-md-end">
+            <button type="button" class="btn btn-secondary"
+              data-bs-dismiss="modal">Stäng</button>
+            <button type="button" class="btn btn-primary"
+              id="accept-cookies-modal" data-bs-dismiss="modal">Godkänn
+              cookies</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 
 </html>
